--- a/MatrixResponsibility.Client/Layout/MyLayout.razor
+++ b/MatrixResponsibility.Client/Layout/MyLayout.razor
@@ -15,7 +15,7 @@
             <RadzenText class="rz-color-info-darker rz-mr-5 rz-mt-1">Пользователей online: @onlineCount</RadzenText>
         </RadzenStack>
     </RadzenHeader>
-    <RadzenSidebar @bind-Expanded="@sidebar1Expanded">
+    <RadzenSidebar @bind-Expanded="@sidebar1Expanded" Responsive="@false">
         <RadzenPanelMenu>
             <RadzenPanelMenuItem Text="temp" Icon="event" Path="/" />
         </RadzenPanelMenu>
